# Maya_Illusion

./: .gitignore  CMDS  DETAILED-README.md  README.md  deepstream-camera-pipeline.py  deepstream-diagnostics.sh  simple-deepstream-pipeline.py
Maya_Box/: app.py  debug_log.txt  overlay.js  styles.css  video_app
Maya_Box_1/: CMDS  Makefile  index.html  video_app.cpp  video_formats.txt
Maya_Box_2/: Makefile
Maya_Box_2/scripts/: build.sh
Maya_Box_2/src/cpp/: minimal-test  minimal-test.cpp  video_app.cpp
Maya_Box_2/src/web-overlay/: package-lock.json  package.json
Maya_Box_2/src/web-overlay/public/: index.html
Maya_Box_2/src/web-overlay/src/: App.js  index.js
Maya_Box_2/src/web-overlay/src/components/: Controls.js  Overlay.js
Maya_Box_2/src/web-overlay/src/styles/: styles.css
Maya_CEF/: CMakeLists.txt  readme_md.md  setup_doc.md  setup_script.sh  video_app_cef.cpp
Maya_ONXX/: CMDS  Dockerfile  Dockerfile2  cpp-gstreamer-deepstream.txt
PyBridge/: CMDS  shm-receiver-debug.py  udp-receiver-debug.py
backend/: requirements.txt  trasnport_test.py  video-server.py
documentation/: links.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AIController.js  AIPolygonOverlay.js  AnimatedAIPolygonOverlay.js  CommandDashboard.js  DetroitOverlay.js
frontend/src/services/: aiPolygonService.js  dataTransformer.js  websocketService.js
